Image Alignment of the testimonials is fixed

--- a/src/Pages/Testimonial.css
+++ b/src/Pages/Testimonial.css
@@ -51,7 +51,7 @@
 
 .image {
     text-align: center;
-    margin-bottom: 20px;
+    margin: 20px auto ;
 }
 
 .image img {
